# gdbot

./: CMakeLists.txt  about.md  changelog.md  mod.json
.github/workflows/: build.yml
src/: GameHook.cpp  GameHook.hpp  NEATManager.cpp  NEATManager.hpp  Neat.cpp  Neat.hpp  PauseMenu.cpp  PlaybackStore.cpp  PlaybackStore.hpp
